--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
   <header>
     <!-- Ganti src ini dengan path gambarmu yang benar -->
     <img src="img/anatomi-lele.png" alt="Anatomi Lele" />
-    <h1>CLAS cals tahun</h1>
+    <h1>NO JOMOK NO FREND</h1>
   </header>
 
   <nav class="years-list" role="navigation" aria-label="Pilih tahun evolusi meme">
