--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
   <header>
     <img src="img/anatomi-lele.png" alt="Anatomi Lele" />
-    <h1>CLAS cals tahun</h1>
+    <h1>NO JOMOK NO FREND</h1>
   </header>
 
   <button class="start-btn" aria-label="Mulai evolusi meme jomok">MULAI</button>
