--- a/mulai.html
+++ b/mulai.html
@@ -135,11 +135,11 @@
       <h2>S Tier</h2>
       <div class="memes">
         <div class="meme" tabindex="0">
-          <img src="img/S1.jpg" alt="Meme Jomok S1" loading="lazy" />
+          <img src="img/S1.mp4" alt="Meme Jomok S1" loading="lazy" />
           <span>S1</span>
         </div>
         <div class="meme" tabindex="0">
-          <img src="img/S2.jpg" alt="Meme Jomok S2" loading="lazy" />
+          <img src="img/S2.mp4" alt="Meme Jomok S2" loading="lazy" />
           <span>S2</span>
         </div>
         <div class="meme" tabindex="0">
